--- a/Tribute Page.css
+++ b/Tribute Page.css
@@ -94,3 +94,30 @@ blockquote {
   margin: 0 auto 50px auto;
   text-align: left;
 }
+
+
+footer {
+  font-weight: 300;
+  display: flex;
+  box-sizing: border-box;
+  justify-content: space-evenly;
+  padding: 2rem;
+  background: gray;
+  color:white;
+  border-top: 4px solid ;
+}
+
+footer > p {
+  margin: 2rem;
+}
+
+footer i {
+  vertical-align: middle;
+}
+
+@media (max-width: 28.75em) {
+  footer {
+    flex-direction: column;
+    text-align: center;
+  }
+}
