--- a/portfolio.css
+++ b/portfolio.css
@@ -124,7 +124,7 @@ img {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  height: 90vh;
   background-color: #000;
   background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
 }
@@ -233,7 +233,7 @@ img {
   align-items: center;
   text-align: center;
   width: 100%;
-  height: 80vh;
+  height: 70vh;
   padding: 0 2rem;
   background: var(--main-gray);
 }
@@ -274,6 +274,7 @@ img {
 footer {
   font-weight: 300;
   display: flex;
+  box-sizing: border-box;
   justify-content: space-evenly;
   padding: 2rem;
   background: var(--main-gray);
